Bug 455353 - Regression: filtering is per screen instead of global
Summary: Regression: filtering is per screen instead of global
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-present-windows (other bugs)
Version First Reported In: 5.25.0
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
: 455622 455700 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-15 18:00 UTC by Christian (Fuchs)
Modified: 2022-06-21 17:53 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian (Fuchs) 2022-06-15 18:00:57 UTC
SUMMARY
As per https://bugs.kde.org/show_bug.cgi?id=455332

Typing to filter windows is per screen instead of global. Which especially breaks the workflow if the effect is called due to clicking on a grouped app in task manager

STEPS TO REPRODUCE
1. Open present window, e.g. by clicking on a grouped app, say, konsole, that has windows on all screens
2. Try to filter by typing to the one you want

OBSERVED RESULT
Can't, since the filter only applies to the current screen

EXPECTED RESULT
Can, because filter applies to all screens

Operating System: Fedora Linux 36
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.3
Kernel Version: 5.17.13-300.fc36.x86_64 (64-bit)
Graphics Platform: X11
Processors: 12 × AMD Ryzen 5 5600X 6-Core Processor
Memory: 31.2 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3070/PCIe/SSE2
Comment 1 Bug Janitor Service 2022-06-16 14:31:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2532
Comment 2 Nate Graham 2022-06-17 14:55:45 UTC
Git commit 13e3630127b32c7a052528174d8b7220c4dd71b1 by Nate Graham, on behalf of Marco Martin.
Committed on 17/06/2022 at 14:55.
Pushed by ngraham into branch 'master'.

effects/windowview: Search on all screens

use a property of the effect itself to store the search text
so all the views will search for the same thing at the same time.
FIXED-IN: 5.25.1

M  +10   -2    src/effects/windowview/qml/main.qml
M  +3    -0    src/effects/windowview/windowvieweffect.h

https://invent.kde.org/plasma/kwin/commit/13e3630127b32c7a052528174d8b7220c4dd71b1
Comment 3 Nate Graham 2022-06-17 15:12:14 UTC
Git commit 62282a91cc418ab7abf2ac240b3dbb154504f1fe by Nate Graham, on behalf of Marco Martin.
Committed on 17/06/2022 at 15:12.
Pushed by ngraham into branch 'Plasma/5.25'.

effects/windowview: Search on all screens

use a property of the effect itself to store the search text
so all the views will search for the same thing at the same time.
FIXED-IN: 5.25.1


(cherry picked from commit 13e3630127b32c7a052528174d8b7220c4dd71b1)

M  +10   -2    src/effects/windowview/qml/main.qml
M  +3    -0    src/effects/windowview/windowvieweffect.h

https://invent.kde.org/plasma/kwin/commit/62282a91cc418ab7abf2ac240b3dbb154504f1fe
Comment 4 Nate Graham 2022-06-21 17:53:18 UTC
*** Bug 455622 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2022-06-21 17:53:22 UTC
*** Bug 455700 has been marked as a duplicate of this bug. ***