src/effects/windowview/windowvieweffect.h
@@ -24,6 +24,7 @@ class WindowViewEffect : public QuickSceneEffect
     Q_PROPERTY(PresentWindowsMode mode READ mode NOTIFY modeChanged)
     Q_PROPERTY(qreal partialActivationFactor READ partialActivationFactor NOTIFY partialActivationFactorChanged)
     Q_PROPERTY(bool gestureInProgress READ gestureInProgress NOTIFY gestureInProgressChanged)
+    Q_PROPERTY(QString searchText MEMBER m_searchText NOTIFY searchTextChanged)
 
 public:
     enum PresentWindowsMode {
@@ -84,6 +85,7 @@ Q_SIGNALS:
     void modeChanged();
     void layoutChanged();
     void ignoreMinimizedChanged();
+    void searchTextChanged();
 
 protected:
     QVariantMap initialProperties(EffectScreen *screen) override;
@@ -109,6 +111,7 @@ private:
     QList<ElectricBorder> m_touchBorderActivate;
     QList<ElectricBorder> m_touchBorderActivateAll;
     QList<ElectricBorder> m_touchBorderActivateClass;
+    QString m_searchText;
     Status m_status = Status::Inactive;
     qreal m_partialActivationFactor = 0;
     PresentWindowsMode m_mode;
